ready to publish

--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -2,7 +2,7 @@
   <div id='title'><h1>Untitled Pad</h1></div>
   <input id='input_title'>
   <div id='edit_title'>Edit</div>
-  <div id='save_title'>OK</div>
+  <div id='save_title'><button>OK</button></div>
 </div>
 
 <style type="text/css">
