--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -1,5 +1,5 @@
 <div id='pad_title'>
-  <div id='title'><h1>Untitled Pad</h1></div>
+  <div id='title'><h1></h1></div>
   <input id='input_title'>
   <div id='edit_title'>Edit</div>
   <div id='save_title'><button>OK</button></div>
