--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -14,6 +14,10 @@
   display:none;
 }
 #title{
+  max-width:90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   display:inline-block;
 }
 #edit_title{
