fix styling and bump v

--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -10,7 +10,7 @@
   margin:10px;
 }
 #input_title{
-  height:27px;
+  height:24px;
   display:none;
 }
 #title{
@@ -21,7 +21,7 @@
   display:inline-block;
 }
 #edit_title{
-  margin:10px;
+  margin-left:10px;
   display:inline-block;
   cursor:pointer;
 }
