--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -12,6 +12,7 @@
 #input_title{
   height:24px;
   display:none;
+  padding-left:2px;
 }
 #title{
   max-width:90%;
@@ -29,6 +30,10 @@
   display:inline-block;
   display:none;
   cursor:pointer;
+}
+#save_title button{
+  height:28px;
+  padding: 0 2px 0 2px;
 }
 @media print{
   #edit_title, #save_title{
