--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -40,6 +40,12 @@
     display:none;
   }
 }
+@media (max-width: 500px){
+  #pad_title{
+    display:none;
+  }
+}
+
 </style>
 
 <script src="../static/js/jquery.js"></script>
