--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -14,8 +14,11 @@
   height:24px;
   display:none;
   padding-left:2px;
+  width:90%;
 }
+
 #title{
+  line-height:30px;
   max-width:90%;
   white-space: nowrap;
   overflow: hidden;
@@ -31,6 +34,7 @@
   display:inline-block;
   display:none;
   cursor:pointer;
+  margin-left:8px;
 }
 #save_title button{
   height:28px;
