--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -25,6 +25,9 @@
   text-overflow: ellipsis;
   display:inline-block;
 }
+#title h1{
+  line-height:160%;
+}
 #edit_title{
   margin-left:10px;
   display:inline-block;
