--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -6,54 +6,55 @@
 </div>
 
 <style type="text/css">
-#pad_title{
-  height:30px;
-  margin:10px;
-}
-#input_title{
-  height:24px;
-  display:none;
-  padding-left:2px;
-  width:90%;
-}
-
-#title{
-  line-height:30px;
-  max-width:90%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display:inline-block;
-}
-#title h1{
-  line-height:160%;
-}
-#edit_title{
-  margin-left:10px;
-  display:inline-block;
-  cursor:pointer;
-}
-#save_title{
-  display:inline-block;
-  display:none;
-  cursor:pointer;
-  margin-left:8px;
-}
-#save_title button{
-  height:28px;
-  padding: 0 2px 0 2px;
-}
-@media print{
-  #edit_title, #save_title{
-    display:none;
+  #pad_title {
+    height:30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    margin: 0 !important;
+    padding: 10px;
   }
-}
-@media (max-width: 500px){
-  #pad_title{
+  #input_title{
+    height:24px;
     display:none;
+    padding-left:2px;
+    flex: 1 auto;
   }
-}
-
+  #title{
+    line-height:30px;
+    max-width: calc(100% - 30px);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  #title h1{
+    line-height:160%;
+  }
+  #edit_title{
+    margin-left:10px;
+    padding-top: 5px;
+    cursor:pointer;
+  }
+  #save_title{
+    display:none;
+    cursor:pointer;
+    margin-left:8px;
+  }
+  #save_title button{
+    height:28px;
+    padding: 0 2px 0 2px;
+  }
+  @media print{
+    #edit_title, #save_title{
+      display:none;
+    }
+  }
+  @media (max-width: 720px){
+    #pad_title{
+      display:none;
+    }
+  }
 </style>
 
 <script src="../static/js/jquery.js"></script>
