css: fix box-sizing change, and use fontawesome 5 icon

--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -1,19 +1,18 @@
 <div id='pad_title'>
   <div id='title'><h1>Untitled Pad</h1></div>
   <input id='input_title'>
-  <div id='edit_title' class='acl-write buttonicon buttonicon-pencil'></div>
+  <div id='edit_title' class='acl-write buttonicon buttonicon-pencil-alt'></div>
   <div id='save_title'><button class="btn btn-primary">OK</button></div>
 </div>
 
 <style type="text/css">
   #pad_title {
-    height:30px;
     display: flex !important;
     flex-direction: row;
     align-items: center;
     border-bottom: 1px solid #ccc;
     margin: 0 !important;
-    padding: 10px;
+    padding: 3px 10px;
   }
   #input_title{
     display:none;
