--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -1,8 +1,8 @@
 <div id='pad_title'>
-  <div id='title'><h1>Untitled Pad</h1></div>
+  <div id='title'><h1 data-l10n-id="ep_set_title_on_pad.untitled">Untitled Pad</h1></div>
   <input id='input_title'>
   <div id='edit_title' class='acl-write buttonicon buttonicon-pencil-alt'></div>
-  <div id='save_title'><button class="btn btn-primary">OK</button></div>
+  <div id='save_title'><button class="btn btn-primary" data-l10n-id="ep_set_title_on_pad.ok">OK</button></div>
 </div>
 
 <style type="text/css">
@@ -53,7 +53,3 @@
     }
   }
 </style>
-
-<script src="../static/js/jquery.js"></script>
-
-
