better ui around click

--- a/templates/title.ejs
+++ b/templates/title.ejs
@@ -1,5 +1,5 @@
 <div id='pad_title' class='flex_title'>
-  <div id='title'><h1 data-l10n-id="pad.loading"><a href="">Loading...</a></h1></div>
+  <div id='title'><h1><a href="" data-l10n-id="pad.loading">Loading...</a></h1></div>
   <input id='input_title'>
   <div id='edit_title' class='acl-write buttonicon buttonicon-pencil-alt'></div>
   <div id='save_title'><button class="btn btn-primary">OK</button></div>
@@ -35,6 +35,7 @@
     padding-top: 5px;
     margin-left: 10px;
     cursor:pointer;
+    display:none;
   }
   #save_title{
     display:none;
